--- a/get-involved/style.css
+++ b/get-involved/style.css
@@ -41,7 +41,7 @@ input {
         border-radius: 10px;
         width: 75vw;
         height: min-content;
-        padding: 4vh 2vw;
+        padding: max(4vh, 25px) max(2vw, 25px);
     }
 
     #toprow {
@@ -54,8 +54,11 @@ input {
         min-height: 100px;
     }
 
-    #toprow>div {
+    #toprow > div {
         margin-left: auto;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
     }
 
     #toprow ul {
@@ -65,8 +68,8 @@ input {
         list-style: none;
         margin: 0;
         padding: 0;
+        margin-bottom: 2vh;
         margin-left: auto;
-        margin-top: 4%;
         font-weight: bold;
         height: min-content;
         font-size: calc(0.2vw + 20px);
@@ -109,7 +112,7 @@ input {
         border-radius: 10px;
         width: 75vw;
         height: min-content;
-        padding: 4vh 2vw;
+        padding: max(4vh, 25px) max(2vw, 25px);
     }
 
     #toprow {
@@ -117,7 +120,7 @@ input {
         flex-direction: row;
     }
 
-    #toprow>div {
+    #toprow > div {
         margin-left: auto;
     }
 
