--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ p {
 
     #toprow > div {
         margin-left: auto;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
     }
 
     #toprow ul {
@@ -55,8 +58,8 @@ p {
         list-style: none;
         margin: 0;
         padding: 0;
+        margin-bottom: 2vh;
         margin-left: auto;
-        margin-top: 4%;
         font-weight: bold;
         height: min-content;
         font-size: calc(0.2vw + 20px);
@@ -376,7 +379,7 @@ button {
         background-color: #F4F0E6;
         display: flex;
         flex-direction: column;
-        gap: 4vw;
+        gap: 2vh;
     }
 }
 
